Add proper response struct for the get long url endpoint
